# NEURONET-Project

./: README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
experiment/: energy_prediction_model.ipynb  experiment_data.tar.xz  explore_data.ipynb  vm_anomaly_detection.ipynb  vm_power_prediction.ipynb
experiment/UC1/energy_prediction/: README.md  energy_model_inference.yaml  pipeline.py
experiment/UC1/energy_prediction/components/: evaluate.py  get_data.py  preprocessing.py  training.py
experiment/UC1/vm_power_prediction/: pipeline.py
experiment/UC1/vm_power_prediction/components/: evaluate.py  get_data.py  preprocessing.py  training.py
experiment/datasets/: energy_dataset.csv  vm_power_dataset.csv
experiment/processed/: explore_processed_data.ipynb  explore_proxmox_data.ipynb  explore_scaphandre_vms_data.ipynb  host_scaphandre_processed.csv  kepler_processed.csv  pdu_processed.csv  proxmox_processed.csv  vm_scaphandre_processed.csv
scripts/: hostData_20250730_150947-10m.csv  keplerData_20250730_150947-10m.csv  neuronet-basic-queries.sh  pduData_20250730_150947-10m.csv  proxmoxData_20250730_150947-10m.csv  scaphandreHostData_20250730_150947-10m.csv  scaphandreVmData_20250730_150947-10m.csv
src/neuronet/datasets/: energy_dataset.py  test_cluster.py  vm_power_dataset.py
src/neuronet/influxdb/: influxdb_query.py
src/neuronet/preprocessing/: k8s.py  kepler.py  pdu.py  proxmox.py  scaphandre.py
