[metadata]
name = neuronet
version = 0.0.1
description = NEURONET: iNtelligent Energy Usage-awaRe platfOrm for sustaiNable grEen neTworking
keywords = machine-learning, deep-learning, 5G, energy-efficiency, sustainability, green networking
author = NEURONET Team
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.10
zip_safe = False
include_package_data = True
install_requires =
    scikit-learn>=1.7.0

[options.packages.find]
where = src

[options.package_data]
deepmol = py.typed

[flake8]
max-line-length = 160